--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="CV2.css">
+    <link rel="stylesheet" type="text/css" href="css/CV2.css">
     <link rel="icon" type="image/x-icon" href="iconoCV.jpg">
     <title>Curriculum Vitae</title>
 </head>
